{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "b2c16c5d-7dfb-4121-a0f9-d73fc6fda0e7",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "bffe4385-d9c4-47d4-bf53-7a5fb775d9ae",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "aa35fc58-d1a2-4e16-9148-323d078f508e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMove",
                    "type": "PassThrough",
                    "id": "93ef1dbc-0ab3-4bd9-bea9-123f204f7618",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "dec57d59-0ce7-4453-927a-866900a28e3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5c2d6488-ddda-472c-ac66-3c79b0d3c411",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24ddd258-bcaf-49c8-8e76-0804db2e6ea0",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "910c6854-6b86-424c-b8f5-6742cd8c06c6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1bd8fbd1-d35b-45ac-bf19-53777af04ec7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "48dc7ca1-5af4-492b-90b1-1551f2aeff27",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "47de9458-8e5c-48bf-9065-390dd9c2167c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "21895a62-b7ad-4e2e-b7fd-f38d382fe6c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0509e42e-b9f4-4b8e-9fcb-f49345b23f9f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press,Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0054695f-9e66-47cc-80ab-2a919b75bb08",
                    "path": "<Keyboard>/space",
                    "interactions": "Press,Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f106293-6676-4bcc-af3c-4409c66b87b6",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press,Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32dff057-84f0-4c17-8ab2-e304e3295924",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "dbdb6e91-ddd0-4212-8641-020e21294484",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8370f9d8-7115-4f89-b1ea-799976dbc166",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "03c9f324-4ba1-488a-b73f-7f036b1268e0",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e9a2f7f-0144-46ae-8cac-17deae76991b",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "14d27d9e-ca60-4a2c-84f0-fd6ec8e35dbd",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ec6cdc24-ea40-4bde-af33-3ba4c8d5b56a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d727cd99-b4e3-4fff-bf55-1e49c704bd09",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26715727-53cd-4dd5-b1ff-937bb54ef15a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f95265b1-cf2a-424f-a17a-20794025ec4d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67dbfe78-5b40-4dbc-8880-0c02d52ff42a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControls",
            "bindingGroup": "PlayerControls",
            "devices": []
        }
    ]
}